# softRenderer

./: .gitignore  CMakeLists.txt
cmake/sdl2/: sdl2-config.cmake
include/: model.h  screen.h  window.h
main/: CMakeLists.txt  main.cpp
src/: CmakeLists.txt  model.cpp  screen.cpp  window.cpp
tests/: CmakeLists.txt  tests.cpp
